--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -7,7 +7,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: metis Python package
+name: Test Metis Python package and notebooks
 
 on:
   push:
@@ -44,10 +44,19 @@ jobs:
         cd py
         pip install .
 
-    - name: Test with pytest
+    - name: Test Python package with pytest
       run: |
         cd py
         pytest
+
+    # Simply 'Cell -> Run All` these notebooks and expect no errors.
+    # See also https://github.com/marketplace/actions/run-notebook if a more complicated
+    # workflow for notebooks is needed in the future.
+    - name: Execute all notebooks with nbconvert
+      run: |
+        pip install nbconvert
+        cd notebooks
+        for nb in *ipynb ; do jupyter nbconvert --to notebook --execute "${nb}" ; done
 
 # Disable lint check for now. Reenable after adjusting the 'disable' list or
 # fixing the lint.
