--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -15,9 +15,9 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
-  # Allows manually triggering workflow in GitHub UI on selected branch.
-  # GitHub doc: https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows#workflow_dispatch.
-  # GitHub blog demo: https://github.blog/changelog/2020-07-06-github-actions-manual-triggers-with-workflow_dispatch/.
+    # Allows manually triggering workflow in GitHub UI on selected branch.
+    # GitHub doc: https://docs.github.com/en/free-pro-team@latest/actions/reference/events-that-trigger-workflows#workflow_dispatch.
+    # GitHub blog demo: https://github.blog/changelog/2020-07-06-github-actions-manual-triggers-with-workflow_dispatch/.
 
 jobs:
   build:
@@ -41,21 +41,22 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pylint pytest
-        cd py
         pip install .
 
     - name: Test Python package with pytest
       run: |
-        cd py
         pytest
 
-    # Simply 'Cell -> Run All` these notebooks and expect no errors.
-    # See also https://github.com/marketplace/actions/run-notebook if a more complicated
-    # workflow for notebooks is needed in the future.
     - name: Execute all notebooks with nbconvert
+      # Simply 'Cell -> Run All` these notebooks and expect no errors.
+      # See also https://github.com/marketplace/actions/run-notebook if a more complicated
+      # workflow for notebooks is needed in the future.
       run: |
         pip install nbconvert
-        cd notebooks
+        # Ensure that notebooks depend only on installed package.
+        tmp_dir=$(mktemp -d -t ci-XXXXXXXXXX)
+        cp notebooks/*.ipynb $tmp_dir
+        cd $tmp_dir
         for nb in *ipynb ; do jupyter nbconvert --to notebook --execute "${nb}" ; done
 
 # Disable lint check for now. Reenable after adjusting the 'disable' list or
@@ -63,5 +64,4 @@ jobs:
 #
 #    - name: Lint with pylint
 #      run: |
-#        cd py
 #        pylint --disable=R,W,C0116,C0115,C0302,C0103,C0330 metis/
