--- a/.github/workflows/publish-to-terra.yml
+++ b/.github/workflows/publish-to-terra.yml
@@ -16,7 +16,7 @@ on:
 env:
   # TO REUSE THIS TEMPLATE, change these values to reflect those of your destination Terra workspace.
   NAMESPACE: 'verily-metis'
-  WORKSPACE: 'Metis-toolkit-for-vaccine-trial-planning
+  WORKSPACE: 'Metis-toolkit-for-vaccine-trial-planning'
   WORKSPACE_BUCKET: 'fc-560ade3c-d2e9-4968-b307-eda0f53d04b6'
 
 jobs:
