--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 # license that can be found in the LICENSE file or at
 # https://developers.google.com/open-source/licenses/bsd
 
-flax>=0.2.1
+flax==0.5.3
 ipywidgets>=7.5.1
 jax>=0.1.76
 jaxlib>=0.1.52
